# data_integration_questionnaire

./: README.md  chainlit.md  prompts.toml  pyproject.toml
data_integration_questionnaire/: config.py  log_init.py  toml_support.py
data_integration_questionnaire/model/: openai_schema.py  questionnaire.py  questionnaire_factory.py  questions_advices.py
data_integration_questionnaire/service/: advice_service.py  clarification_service.py  dynamic_quizz_service.py  embedding_service.py  flexible_quizz_service.py  html_generator.py  mail_sender.py  similarity_search.py  tagging_service.py
data_integration_questionnaire/service/test/: advice_service_test.py  best_practices_advice_provider.py  dynamic_quizz_factory.py  dynamic_quizz_factory_test.py  mail_sender_test.py  questionnaire_factory.py  questionnaire_test.py
data_integration_questionnaire/ui/: advice_processor.py  chat_settings_factory.py  constants.py  customized_chainlit_callback.py  integration_questionnaire_chainlit.py  mail_processor.py  model.py  pdf_processor.py
docs/: Unified Data Integration- Why the Whole is Greater Than the Sum.txt  best_practices_candidate.txt  data_gourvenance.txt  knowledge_base copy.txt  knowledge_base.txt  notes.txt  project_info.txt  what_is_data_integration.txt
docs/hightouch/: The Complete Guide to the Composable CDP.txt  data_gouvernance_overview.txt
public/css/: styles.css
templates/: results-template.html
